--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ethers": "^5.5.4",
+    "firebase": "^9.22.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
